--- a/app/tornate_client.html
+++ b/app/tornate_client.html
@@ -15,7 +15,7 @@ Message to send: <input type="text" id="msg"/>
     var ws;
 
     function onLoad() {
-        ws = new WebSocket("ws://localhost:8080/imserver/"+$("#userId").val());
+        ws = new WebSocket("ws://localhost:8080/"+$("#userId").val());
         ws.onmessage = function (e) {
             // alert(e.data)
             console.log(e)
